registry/45-metallb-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-lb
  namespace: registry
spec:
  type: LoadBalancer
  loadBalancerIP: 10.99.5.115
  selector:
    app: registry
  ports:
    - name: http
      port: 5000
      targetPort: 5000
